@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

'title Domain Model

'class Platform {
'  -description
'}

class GSM {
    name
    vatNumber
    phoneNumber
    email
}

class AgendaEntry {
     title
     taskDescription
     urgency
     duration
     associatedGreenSpace
     associatedTeam
     associatedVehicles
     status
     startDate
}

class Agenda {
    entries
    gsm
}

class AgendaRepository {
    agendas
}

'class User {
'    name
'    email
'    password
'}

GSM "1" - "1" AgendaEntry: cancels >
GSM "1" -- "1" Agenda: uses >
AgendaEntry "1" -- "1" Agenda: is shown in >
Agenda "1" -- "1" AgendaRepository: stored in >

@enduml